feat(postgis): add PostgreSQL support in core JDBC and WPS scripts