@@ -147,7 +147,7 @@ repositories {
 test {
     minHeapSize = "128m" // initial heap size
     maxHeapSize = "1g" // maximum heap size
-    jvmArgs '-XX:MaxPermSize=1g' // mem argument for the test JVM
+    jvmArgs '-XX:MaxMetaspaceSize=1g' // mem argument for the test JVM
     afterTest { desc, result ->
         println "Executing test ${desc.name} [${desc.className}] with result: ${result.resultType}"
     }
@@ -178,6 +178,7 @@ dependencies {
         exclude group: 'org.geotools', module: 'gt-process-feature'
     }
     implementation 'org.postgresql:postgresql:42.7.4'
+    implementation 'org.orbisgis:postgis-jts:[2.2.5, 3)'
     implementation group: 'org.codehaus.groovy', name: 'groovy-all', version: '[2.5, 2.6)'
     implementation group: 'org.ejml', name: 'all', version: '0.29'
     implementation group: 'org.eclipse.emf', name: 'org.eclipse.emf.ecore', version: '2.10.1'
@@ -199,6 +200,8 @@ dependencies {
     implementation 'com.opencsv:opencsv:5.7.1'
     implementation group: 'org.slf4j', name: 'slf4j-log4j12', version: '[2, 3)'
     testImplementation 'junit:junit:4.13.1'
+    testImplementation 'org.testcontainers:testcontainers:1.19.3'
+    testImplementation 'org.testcontainers:postgresql:1.19.3'
 }
 
 // Function to extract the first GPG key's fingerprint
